k8s/events-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-api
spec:
  type: NodePort
  selector:
    app: events-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-api
  template:
    metadata:
      labels:
        app: events-api
    spec:
      containers:
      - name: events-api
        image: hopdinhp02/ticketsales-eventsapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
