k8s/identity-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api
spec:
  type: NodePort
  selector:
    app: identity-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30005

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
      - name: identity-api
        image: hopdinhp02/ticketsales-identityapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
