k8s/inventory-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api
spec:
  type: NodePort
  selector:
    app: inventory-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      containers:
      - name: inventory-api
        image: hopdinhp02/ticketsales-inventoryapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
