k8s/notifications-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api
spec:
  type: NodePort
  selector:
    app: notifications-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-api
  template:
    metadata:
      labels:
        app: notifications-api
    spec:
      containers:
      - name: notifications-api
        image: hopdinhp02/ticketsales-notificationsapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
